# Parallella-cgminer

./: .gitignore  EPIPHANY-README  Makefile.am  api.c  build.sh  cgminer.c  configure.ac  crypto_scrypt-ref.c  crypto_scrypt.h  driver-cpu.c  driver-cpu.h  driver-epiphany.c  driver-epiphany.h  e-build.sh  e-run.sh  epiphany-salsa208.S  epiphany-salsa20_8.S  epiphany-scrypt-2.c  epiphany-scrypt.c  epiphany_mailbox.h  miner.h  ocl.c  parallella-scrypt.c  run.sh  scrypt.c  scrypt.h
